    join. (Ashish Thusoo via dhruba)

    HIVE-196. Two test runs can run simultaneously on the same machine.
    (Ashish Thusoo via dhruba)

    HIVE-202. Fix Lineage for join queries.
    (Suresh Antony via dhruba)

    HIVE-48.  Support JDBC connections for interoperability between 
    Hive and RDBMS.  (Raghotham Murthy and Michi Mutsuzaki via dhruba)

    HIVE-84.  Make MetaStore Client thread safe.  (Prasad Chakka via dhruba)

    HIVE-203. Fix eclipse templates to get junit tests to run.
    (iRaghotham Murthy via dhruba)

    HIVE-220. Incorrect log directory in TestMTQueries causing null pointer
    exception.  (Prasad Chakka via dhruba)

    HIVE-230.  Fix for a Null Pointer Exception that occured while loading a 
    table from a query that returns empty data.  (Prasad Chakka via dhruba)

    HIVE-232. Metastore.warehouse configuration should use inherited 
    hadoop configuration. (Prasad Chakka via dhruba)

    HIVE-239. Check that replace columns in alter table does not have names
    that are same as the partitioning columns. (Prasad Chakka via athusoo)

    HIVE-25. Enable Table aliases in cluster by, distribute by and sort
    by clauses. (Prasad Chakka via athusoo)

    HIVE-217. Report progress during FileSinkOperator in order to avoid
    Stream closes exceptions. (Johan Oskarsson via athusoo)

    HIVE-91. Add ADD PARTITION support to ALTER TABLE in order to add
    partitions to a table. (Johan Oskarsson via athusoo)

    HIVE-242. Fix to allow CLI to interpret line breaks in any CLI
    command. (Prasad Chakka via athusoo)

    HIVE-65. Rewrite typechecking to use the walker interface and add
    Resolvers to UDF and UDAF to support proper implicit casting
    in a manner similar to other RDBMSs. (athusoo)

    HIVE-249. Give execute permissions to the hive binary 
    (Jeff Hammerbacher via athusoo)

    HIVE-246. Fix to make msck command to look for tables in hdfs
    that are in the metastore. (Johan Oskarsson via athusoo)